--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   get: ^4.6.5
   shared_preferences: ^2.2.0
   country_code_picker: ^3.0.0
+  flutter_svg: ^2.0.4
 
 flutter_icons:
   android: true
